--- a/packages/host/src/track/TrackListItem.scss
+++ b/packages/host/src/track/TrackListItem.scss
@@ -1,9 +1,20 @@
-.TrackListItem-voting .badge {
-  right: -15px;
-}
-.TrackListItem-audio {
-  display: block;
-  max-width: 0.2em;
-  width: 20px;
-}
+.TrackListItem-root {
+  border-bottom: 1px solid #979797;
 
+  .TrackListItem-voting .badge {
+    right: -15px;
+  }
+  .TrackListItem-audio {
+    display: block;
+    max-width: 0.2em;
+    width: 20px;
+  }
+
+  .TrackListItem-name {
+    padding-left: 10px !important;
+  }
+
+  img: {
+    border-radius: 4px;
+  }
+}
