--- a/packages/host/src/components/SearchTracks/EventSearchTracks.scss
+++ b/packages/host/src/components/SearchTracks/EventSearchTracks.scss
@@ -1,33 +1,6 @@
-.SearchSection {
-  display: flex;
-  align-items: center;
-}
-
-.trackNameContainer {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-}
-
-.trackBand {
-  font-weight: 800;
-}
-
-.trackLeftContent {
-  display: flex;
-  align-items: center;
-}
-
-.listItemContent {
-  width: 100%;
-  justify-content: space-between;
-}
-
-.trackDuration {
-  width: 80px;
-}
-
-.listItemContent-column {
-  flex-direction: column!important;
-  align-items: flex-start!important;
+.EventSearchTracks-root {
+  .EventSearchTracks-section {
+    display: flex;
+    align-items: center;
+  }
 }
