--- a/packages/host/src/event/eventCreation/CreateEvent.scss
+++ b/packages/host/src/event/eventCreation/CreateEvent.scss
@@ -14,7 +14,7 @@ div[role='option'] {
 }
 
 div.filepicker {
-  background: url('../../assets/partycover.png') no-repeat center;
+  background: url('../../assets/partycover.jpg') no-repeat center;
   background-size: cover;
   display: flex;
   justify-content: center;
