--- a/packages/host/src/event/saveEvent/EventDetails.scss
+++ b/packages/host/src/event/saveEvent/EventDetails.scss
@@ -10,7 +10,7 @@
 
   .EventDetails-image {
     div.filepicker {
-      background: url('../../assets/partycover.png') no-repeat center;
+      background: url('../../assets/partycover.jpg') no-repeat center;
       background-size: cover;
       display: flex;
       justify-content: center;
