--- a/packages/host/src/event/saveEvent/SaveEvent.scss
+++ b/packages/host/src/event/saveEvent/SaveEvent.scss
@@ -1,10 +1,8 @@
 .SaveEvent-root {
+  width: 100%;
   .SaveEvent-form {
     padding: 2em;
-
-    .SaveEvent-form-content {
-      padding-bottom: 1em;
-    }
+    margin-bottom: 64px;
 
     .SaveEvent-form-actions {
       margin-top: 2em;
