--- a/packages/host/src/event/saveEvent/TrackItem.scss
+++ b/packages/host/src/event/saveEvent/TrackItem.scss
@@ -4,33 +4,11 @@
   border-bottom: 1px solid $light-grey;
 
   .TrackItem-content {
-    flex-direction: column !important;
-    align-items: flex-start !important;
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  .TrackItem-left-content {
-    display: flex;
-    align-items: center;
-
-    .TrackItem-name-container {
-      display: flex;
-      flex-direction: column;
-      width: 300px;
-    }
-
-    .TrackItem-band {
-      font-weight: 800;
-    }
-
-    .TrackItem-duration {
-      width: 80px;
-    }
+    padding-left: 1em;
+    padding-right: 2em;
   }
 
   .TrackItem-accept-track {
-    background: $bright-green;
     color: $mm-white;
   }
 
