--- a/packages/host/src/track/TrackListItem.scss
+++ b/packages/host/src/track/TrackListItem.scss
@@ -1,6 +1,10 @@
 .TrackListItem-root {
   border-bottom: 1px solid #979797;
 
+  .TrackItem-content {
+    padding-left: 1em;
+    padding-right: 2em;
+  }
   .TrackListItem-voting .badge {
     right: -15px;
   }
