--- a/packages/host/src/home/Home.scss
+++ b/packages/host/src/home/Home.scss
@@ -28,6 +28,7 @@
       padding-top: 0.2rem;
       padding-bottom: 0.2rem;
       width: 100%;
+      height: 300px;
     }
 
     .Home-carousel-item-nav-left {
