--- a/packages/host/src/catalogue/SmallPlaylistCard.scss
+++ b/packages/host/src/catalogue/SmallPlaylistCard.scss
@@ -28,10 +28,8 @@
   }
 
   .SmallPlaylistCard-image {
-    height: 120px;
+    height: 100%;
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
 
     img {
       width: 100%;
