Basic format for playlist creation

--- a/packages/host/src/event/saveEvent/SeedPlaylist.scss
+++ b/packages/host/src/event/saveEvent/SeedPlaylist.scss
@@ -2,62 +2,14 @@
 
 .SeedPlaylist-root {
   height: 100%;
+  width: 100%;
+
+  h6 {
+    color: $dark-grey;
+  }
+
   .SeedPlaylist-loading-area {
     height: 255px;
-  }
-  .SeedPlaylist-grid-list-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    overflow: hidden;
-    height: 255px;
-
-    .SeedPlaylist-grid-list {
-      flex-wrap: nowrap;
-      transform: translateZ(0);
-    }
-    .SeedPlaylist-playlist {
-      margin: 0.5rem;
-    }
-
-    .SeedPlaylist-playlist-card {
-      width: 260px;
-      height: 250px;
-    }
-
-    .SeedPlaylist-playlist-selected {
-      background-color: $primary;
-    }
-  }
-
-  .SeedPlaylist-grid-list-container-mobile {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-
-    .SeedPlaylist-grid-list-col {
-      display: flex;
-      flex-direction: column;
-      flex-basis: 100%;
-      flex: 1;
-    }
-    .SeedPlaylist-playlist {
-      margin: 0.5rem;
-    }
-
-    .SeedPlaylist-playlist-card {
-      height: 180px;
-      width: 160px;
-    }
-
-    .SeedPlaylist-playlist-selected {
-      border: 2px solid $primary;
-      background-color: $primary;
-      --box-shadow-color: $primary;
-    }
   }
 
   .SeedPlaylist-clear {
@@ -67,5 +19,14 @@
     bottom: auto;
     left: auto;
     position: fixed;
+  }
+
+  .SeedPlaylist-image {
+    height: 4em;
+    width: 4em;
+  }
+
+  .SeedPlaylist-item-text {
+    padding-left: 2em;
   }
 }
