--- a/packages/host/src/theme/variables/_colours.scss
+++ b/packages/host/src/theme/variables/_colours.scss
@@ -8,5 +8,6 @@ $mm-white: #f6f6f6;
 $black: rgba(0, 0, 0, 0.5);
 $purple-tint: #5157ab;
 $grey-tint: rgba(81, 89, 166, 0.48);
+$dark-grey: #1a0d00;
 $light-grey: #979797;
 $bright-green: #27ae60;
