--- a/packages/host/src/search/TrackSearch.scss
+++ b/packages/host/src/search/TrackSearch.scss
@@ -1,8 +1,8 @@
 .TrackSearch-root {
   padding: 2px 4px;
+  margin-bottom: 1em;
   display: flex;
   align-items: center;
-  width: 400;
 
   .TrackSearch-input {
     margin-left: 8px;
