--- a/packages/host/src/event/saveEvent/SeedPlaylist.scss
+++ b/packages/host/src/event/saveEvent/SeedPlaylist.scss
@@ -39,7 +39,9 @@ $base-shadow: rgba(0, 0, 0, 0.12);
   }
 
   .SeedPlaylist-select-playlist {
+    opacity: 0.55;
     background-color: $secondary-main;
+    backdrop-filter: blur(5px);
     border-radius: 20px;
     padding-top: 0.75em;
     padding-bottom: 0.75em;
