--- a/packages/host/src/theme/variables/_colours.scss
+++ b/packages/host/src/theme/variables/_colours.scss
@@ -11,3 +11,5 @@ $grey-tint: rgba(81, 89, 166, 0.48);
 $dark-grey: #1a0d00;
 $light-grey: #979797;
 $bright-green: #27ae60;
+
+$base-shadow: rgba(0, 0, 0, 0.12);
