--- a/packages/host/src/event/saveEvent/EventTracks.scss
+++ b/packages/host/src/event/saveEvent/EventTracks.scss
@@ -3,10 +3,11 @@
 .EventTracks-no-tracks {
   background-color: rgba(175, 0, 255, 0.65);
   backdrop-filter: blur(5px);
+  margin: 0 auto;
   height: 6em;
   padding-top: 1.5em;
   font-size: 2em;
   color: white;
-  box-shadow: 0 14px 26px -12px $primary, 0 4px 23px 0px $base-shadow,
-    0 8px 10px -5px $primary-dark;
+  box-shadow: 0 7px 13px -6px $primary, 0 2px 11px 0px $base-shadow,
+    0 4px 5px -2px $primary-dark;
 }
