--- a/packages/host/src/event/saveEvent/SaveEvent.scss
+++ b/packages/host/src/event/saveEvent/SaveEvent.scss
@@ -11,9 +11,20 @@
       }
     }
   }
+}
 
-  .SaveEvent-loading {
-    height: 40px;
-    margin: 0;
-  }
+.SaveEvent-existing-save-button {
+}
+.SaveEvent-loading {
+  height: 40px;
+  margin: 10% auto;
+}
+
+.SaveEvent-save-button {
+  position: fixed;
+  width: 80%;
+  bottom: 0px;
+  left: 0;
+  right: 0;
+  margin: 1% auto;
 }
