Minor style tweaks

--- a/packages/host/src/event/saveEvent/SaveEvent.scss
+++ b/packages/host/src/event/saveEvent/SaveEvent.scss
@@ -16,6 +16,11 @@
 .SaveEvent-existing-save-button {
 }
 .SaveEvent-loading {
+  position: fixed;
+  width: 80%;
+  bottom: 0px;
+  left: 0;
+  right: 0;
   height: 40px;
   margin: 10% auto;
 }
