Few tyling tweaks

--- a/packages/host/src/event/saveEvent/AddTracks.scss
+++ b/packages/host/src/event/saveEvent/AddTracks.scss
@@ -13,3 +13,11 @@
     margin-bottom: 5em;
   }
 }
+
+.AddTracks-playlist-count {
+  .MuiBadge-badge {
+    @include media('>sm') {
+      right: -20%;
+    }
+  }
+}
