--- a/packages/host/src/event/saveEvent/EventInitialize.scss
+++ b/packages/host/src/event/saveEvent/EventInitialize.scss
@@ -1,5 +1,17 @@
+@import 'theme/main';
+
 .EventInitialize-root {
   .EventInitialize-playlist {
     padding-top: 1em;
+  }
+
+  .EventInitialize-show-details {
+    margin-top: -1em;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+
+    border-top: 20px solid $grey-tint;
   }
 }
