--- a/packages/host/src/layout/DesktopLayout.scss
+++ b/packages/host/src/layout/DesktopLayout.scss
@@ -10,7 +10,7 @@ $width-enter: width 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
   max-width: 100%;
 
   .DesktopLayout-app-bar {
-    background-color: white;
+    background-color: $primary;
     box-shadow: none;
     transition: $margin-leave, $width-leave;
 
