Load of save tweaks

--- a/packages/host/src/event/saveEvent/Summary.scss
+++ b/packages/host/src/event/saveEvent/Summary.scss
@@ -1,5 +1,5 @@
 .Summary-root {
-  .Event-image {
+  .Summary-image {
     div.filepicker {
       background: url('../../assets/partycover.jpg') no-repeat center;
       background-size: cover;
