--- a/packages/host/src/event/eventView/components/Playlist/EventPlaylistView.scss
+++ b/packages/host/src/event/eventView/components/Playlist/EventPlaylistView.scss
@@ -1,4 +1,7 @@
 .EventPlaylistView-root {
+  padding: 15px 30px 30px 30px;
+  height: 100%;
+
   .tabs-wrapper {
     margin: 25px !important;
     padding: 0 !important;
