--- a/packages/host/src/event/saveEvent/EventTracks.scss
+++ b/packages/host/src/event/saveEvent/EventTracks.scss
@@ -1,13 +1,12 @@
 @import 'theme/main';
 
 .EventTracks-no-tracks {
-  background-color: rgba(175, 0, 255, 0.65);
   backdrop-filter: blur(5px);
   margin: 0 auto;
+  margin-top: 2em;
   height: 6em;
   padding-top: 1.5em;
   font-size: 2em;
-  color: white;
   box-shadow: 0 7px 13px -6px $primary, 0 2px 11px 0px $base-shadow,
     0 4px 5px -2px $primary-dark;
 }
