Fixed some styling for current palylist badge
Updated see playlist title.
Removed settings dialog,

--- a/packages/host/src/event/saveEvent/SeedPlaylist.scss
+++ b/packages/host/src/event/saveEvent/SeedPlaylist.scss
@@ -4,8 +4,9 @@
   height: 100%;
   width: 100%;
 
-  h6 {
+  .SeedPlaylist-title {
     color: $dark-grey;
+    padding-top: 1em;
   }
 
   .SeedPlaylist-loading-area {
