--- a/packages/host/src/event/saveEvent/AddTracks.scss
+++ b/packages/host/src/event/saveEvent/AddTracks.scss
@@ -13,10 +13,13 @@
     margin-bottom: 5em;
   }
 }
+.AddTracks-tab {
+  padding: 0.5em 1.5em;
+}
 
 .AddTracks-playlist-count {
   .MuiBadge-badge {
-    right: -0.5%;
+    right: -5%;
     @include media('>sm') {
       right: -20%;
     }
