Settings to detaisl page

--- a/packages/host/src/event/saveEvent/EventDetails.scss
+++ b/packages/host/src/event/saveEvent/EventDetails.scss
@@ -1,4 +1,7 @@
 .EventDetails-root {
+  .EventDetails-settings-title {
+  }
+
   .EventDetails-form-item {
     text-align: center;
     width: 100%;
