--- a/packages/host/src/event/saveEvent/Summary.scss
+++ b/packages/host/src/event/saveEvent/Summary.scss
@@ -1,7 +1,7 @@
 .Summary-root {
   .Summary-image {
     div.filepicker {
-      background: url('../../assets/partycover.jpg') no-repeat center;
+      background: url('../../assets/music-monkey.jpg') no-repeat center;
       background-size: cover;
       display: flex;
       justify-content: center;
