Added requests view

--- a/packages/host/src/requests/Requests.scss
+++ b/packages/host/src/requests/Requests.scss
@@ -1,46 +1,3 @@
-@import 'theme/main';
-
-.Requests-root {
-  .title {
-    display: inline-block;
-    padding: 10px;
-    font-size: 20px;
-  }
-
-  .listItem {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid $light-grey;
-    padding: 10px;
-    margin: 0 5px;
-  }
-
-  .imgSection {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-  }
-
-  .trackImg {
-    width: 40px;
-    height: 40px;
-  }
-
-  .trackNumber {
-    margin-right: 20px;
-  }
-
-  .nameSection {
-    display: flex;
-    flex-direction: column;
-
-    .artistName {
-      font-size: 16px;
-      color: $light-grey;
-    }
-  }
-
-  .menuBtn {
-    cursor: pointer;
-  }
+.Requests-divider {
+  margin: 0 !important;
 }
