--- a/packages/guest/src/theme/theme.module.scss
+++ b/packages/guest/src/theme/theme.module.scss
@@ -1,7 +1,8 @@
-@import './_colours.scss';
+@import 'mm-shared/src/theme/main';
 
 :export {
-  primaryMain: $main;
+  primaryMain: $primary;
   secondaryLight: $secondary-light;
   secondaryMain: $secondary-main;
+  mmWhite: $mm-white;
 }
