--- a/packages/guest/src/loading/LoadingPage.scss
+++ b/packages/guest/src/loading/LoadingPage.scss
@@ -1,4 +1,4 @@
-@import '../theme/colours';
+@import 'mm-shared/src/theme/main';
 
 .loadingPage {
   background-color: $main;
@@ -12,25 +12,22 @@
   width: 100%;
   height: 100%;
   -webkit-animation: color 5s ease-in-out infinite;
-    -moz-animation: color 5s ease-in-out infinite;
-    -o-animation: color 5s ease-in-out infinite;
-    animation: color 5s ease-in-out infinite;
-
+  -moz-animation: color 5s ease-in-out infinite;
+  -o-animation: color 5s ease-in-out infinite;
+  animation: color 5s ease-in-out infinite;
 
   .loadingPage-container {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-
 }
 
 @keyframes color {
   0% {
     background-color: $main;
   }
-  85%{
-      background-color: $secondary-light;
+  85% {
+    background-color: $secondary-light;
   }
-
 }
