--- a/packages/host/src/layout/DesktopLayout.scss
+++ b/packages/host/src/layout/DesktopLayout.scss
@@ -1,4 +1,4 @@
-@import 'theme/main';
+@import 'mm-shared/src/theme/main';
 
 $margin-leave: margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
 $margin-enter: margin 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
