Moved guest layout around a bit

--- a/packages/guest/src/layout/bottombar/BottomBar.scss
+++ b/packages/guest/src/layout/bottombar/BottomBar.scss
@@ -14,7 +14,7 @@
   }
 
   .BottomBar-finder {
-    background: url('../assets/bottom-menu-bg.svg') center center no-repeat;
+    background: url('../../assets/bottom-menu-bg.svg') center center no-repeat;
     width: 88px;
     display: flex;
     justify-content: center;
