--- a/packages/host/src/account/EditAvatar.scss
+++ b/packages/host/src/account/EditAvatar.scss
@@ -1,27 +1,25 @@
-@import 'mm-shared/src/theme/main';
-
-.EditAvatar-root {
+.EditAvatar-wrapper {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: $black;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
+}
 
-  .avatarEditContainer {
-    background: $mm-white;
-    padding: 20px;
-    display: flex;
-  }
+.EditAvatar-container {
+  background: white;
+  padding: 20px;
+  display: flex;
+}
 
-  .avatarControls {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0 10px;
-  }
+.EditAvatar-controls {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 10px;
 }
