Moved playlist view files

--- a/packages/guest/src/playlist/PlaylistPlayer.scss
+++ b/packages/guest/src/playlist/PlaylistPlayer.scss
@@ -21,7 +21,7 @@
   }
 
   .PlaylistPlayer-track-img {
-    background: #e4c6f3 url('../../assets/background-marshmallow-rect.png')
+    background: #e4c6f3 url('../assets/background-marshmallow-rect.png')
       no-repeat center center;
     height: 275px;
     background-size: cover;
