--- a/packages/guest/src/playlist/PlaylistView.scss
+++ b/packages/guest/src/playlist/PlaylistView.scss
@@ -11,8 +11,8 @@
     flex-direction: column;
     height: 170px;
     width: 100%;
-    background: $main url('../../assets/background-marshmallow-rect.png')
-      no-repeat center center;
+    background: $main url('../assets/background-marshmallow-rect.png') no-repeat
+      center center;
     background-size: cover;
     justify-content: space-between;
 
