--- a/packages/host/src/event/eventView/EventView.scss
+++ b/packages/host/src/event/eventView/EventView.scss
@@ -1,7 +1,16 @@
+@import 'mm-shared/src/theme/main';
+
 .EventView-root {
+  width: 100%;
   height: 100%;
-  margin-left: -10px;
-  .EventView-title {
-    padding-left: 1em;
+
+  .EventView-tabs {
+    .EventView-tab[aria-selected='true'] {
+      color: $main;
+    }
+
+    .indicator-color {
+      background-color: $secondary-light;
+    }
   }
 }
