--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -1,9 +1,9 @@
-@import 'mm-shared/src/theme/main';
+@import '../theme/main';
 
 .TrackListItem-root {
   .TrackListItem-content {
     padding-left: 1em;
-    padding-right: 3em;
+    padding-right: 2em;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
