--- a/packages/host/src/index.scss
+++ b/packages/host/src/index.scss
@@ -5,6 +5,11 @@ body {
   font-family: $main-font-family;
 }
 
+.MuiTab-textColorPrimary.Mui-selected {
+  color: $mm-white;
+  background-color: $primary;
+}
+
 a {
   text-decoration: none !important;
 }
