Added event select to most views

--- a/packages/mm-shared/src/event/eventSelect/SelectedEvent.scss
+++ b/packages/mm-shared/src/event/eventSelect/SelectedEvent.scss
@@ -2,7 +2,8 @@
 
 .SelectedEvent-block {
   display: flex;
-  padding: 11px 10px;
+  padding: 1em 2em;
+  margin-bottom: 1em;
   background-color: #f3edf5;
   align-items: center;
   cursor: pointer;
