Put create event button up top

--- a/packages/mm-shared/src/layout/topbar/TopBar.scss
+++ b/packages/mm-shared/src/layout/topbar/TopBar.scss
@@ -9,4 +9,10 @@
     font-weight: 500;
     color: #fff;
   }
+
+  .new-party {
+    margin-right: 2.5em;
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
 }
