--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -5,24 +5,11 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  position: relative;
+  width: 100%;
 
   .EventHeader-background {
     height: 205px;
-    width: 100%;
-    position: absolute;
-    z-index: 0;
-  }
-
-  .EventHeader-content {
-    height: 205px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding-bottom: 5px;
-    position: relative;
-    z-index: 2;
   }
 
   .EventHeader-top-menu {
@@ -35,14 +22,33 @@
     position: fixed;
     padding: 70px 10px 10px;
     height: 45px;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    .EventHeader-back-arrow {
+      color: #fff;
+      font-size: 3em;
+    }
+    .EventHeader-edit {
+      color: #fff;
+      align-self: flex-end;
+    }
   }
 
-  .EventHeader-back-arrow {
-    color: #fff;
-    font-size: 3em;
+  .EventHeader-guests {
+    position: absolute;
+    top: 100px;
+    margin: 0 auto;
+    text-align: center;
+    width: 60%;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
   }
-  .EventHeader-edit {
-    color: #fff;
-    align-self: flex-end;
+
+  .EventHeader-response-menu {
+    position: absolute;
+    top: 170px;
+    margin: 0 auto;
+    text-align: center;
+    width: 60%;
   }
 }
