--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -1,15 +1,20 @@
 @import '../../theme/main';
 
 .EventHeader-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   color: white;
   position: relative;
   width: 100%;
+  height: 205px;
+  text-align: center;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
 
   .EventHeader-background {
-    height: 205px;
+    height: 100%;
+    margin: auto;
   }
 
   .EventHeader-top-menu {
@@ -20,7 +25,7 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    padding: 70px 10px 10px;
+    padding: 70px 15px 15px;
     height: 45px;
     background: rgb(0, 0, 0); /* fallback color */
     background: rgba(0, 0, 0, 0.7);
@@ -32,23 +37,53 @@
       color: #fff;
       align-self: flex-end;
     }
+    @media (min-width: 1025px) {
+      padding-top: 80px;
+    }
   }
 
-  .EventHeader-guests {
+  .EventHeader-actions {
     position: absolute;
-    top: 100px;
-    margin: 0 auto;
+    top: 50px;
     text-align: center;
-    width: 60%;
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.7);
+
+    .EventHeader-heading {
+      background: rgb(0, 0, 0); /* fallback color */
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 5px;
+      text-overflow: ellipsis;
+    }
+
+    .EventHeader-details {
+      background: rgb(0, 0, 0); /* fallback color */
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 5px;
+      height: 120px;
+      padding: 0.1em;
+    }
+
+    .EventHeader-guests {
+    }
+
+    .EventHeader-settings {
+      background: rgb(0, 0, 0); /* fallback color */
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 5px;
+      height: 120px;
+      padding-left: 0.3em;
+      padding-right: 0.3em;
+
+      ul {
+        padding-inline-start: 2em;
+        text-align: start;
+        font-size: 0.8em;
+      }
+    }
   }
 
   .EventHeader-response-menu {
     position: absolute;
-    top: 170px;
-    margin: 0 auto;
-    text-align: center;
-    width: 60%;
+    top: 160px;
+    width: 100%;
   }
 }
