--- a/packages/mm-shared/src/layout/MainLayout.scss
+++ b/packages/mm-shared/src/layout/MainLayout.scss
@@ -1,8 +1,12 @@
 .MainLayout-root {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .MainLayout-body {
+  width: 100%;
+  height: 100%;
   padding-top: 48px;
   padding-bottom: 130px;
 }
