--- a/packages/host/src/event/eventView/EventTracks.scss
+++ b/packages/host/src/event/eventView/EventTracks.scss
@@ -1,4 +1,10 @@
 .EventTracks-root {
   margin-left: 0;
   padding-left: 0;
+
+  .EventTracks-no-tracks {
+    text-align: center;
+    width: 100%;
+    margin-top: 2em;
+  }
 }
