--- a/packages/mm-shared/src/request/MaybeTracks.scss
+++ b/packages/mm-shared/src/request/MaybeTracks.scss
@@ -1,4 +1,4 @@
-.MaybeTracks-root {  
+.MaybeTracks-root {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,4 +7,5 @@
 .noTracks {
   text-align: center;
   width: 100%;
+  margin-top: 2em;
 }
