--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -1,5 +1,7 @@
 @import '../../theme/main';
 
+$text-backdrop: rgba(32, 143, 143, 0.7);
+
 .EventHeader-container {
   color: white;
   position: relative;
@@ -23,26 +25,26 @@
     text-align: center;
 
     .EventHeader-heading {
-      background: rgb(0, 0, 0); /* fallback color */
-      background: rgba(0, 0, 0, 0.7);
+      background: $text-backdrop;
       border-radius: 5px;
       text-overflow: ellipsis;
     }
 
     .EventHeader-details {
-      background: rgb(0, 0, 0); /* fallback color */
-      background: rgba(0, 0, 0, 0.7);
+      background: $text-backdrop;
       border-radius: 5px;
       height: 120px;
+      max-height: 120px;
       padding: 0.1em;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .EventHeader-guests {
     }
 
     .EventHeader-settings {
-      background: rgb(0, 0, 0); /* fallback color */
-      background: rgba(0, 0, 0, 0.7);
+      background: $text-backdrop;
       border-radius: 5px;
       height: 120px;
       padding-left: 0.3em;
@@ -52,6 +54,7 @@
         padding-inline-start: 2em;
         text-align: start;
         font-size: 0.8em;
+        font-weight: 600;
       }
     }
   }
