--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -1,6 +1,6 @@
 @import '../../theme/main';
 
-$text-backdrop: rgba(58, 158, 209, 0.7);
+$text-backdrop: rgba(58, 158, 209, 0.8);
 
 .EventHeader-container {
   background-color: $primary;
@@ -29,13 +29,15 @@ $text-backdrop: rgba(58, 158, 209, 0.7);
       background: $text-backdrop;
       border-radius: 5px;
       text-overflow: ellipsis;
+      padding-left: 0.2em;
+      padding-right: 0.2em;
     }
 
     .EventHeader-details {
       background: $text-backdrop;
       border-radius: 5px;
       height: 120px;
-      max-height: 120px;
+      max-height: 125px;
       padding: 0.1em;
       overflow: hidden;
       text-overflow: ellipsis;
