--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -9,6 +9,7 @@ $text-backdrop: rgba(58, 158, 209, 0.8);
   width: 100%;
   height: 205px;
   text-align: center;
+  font-weight: 700;
 
   a {
     text-decoration: none;
@@ -52,6 +53,7 @@ $text-backdrop: rgba(58, 158, 209, 0.8);
       height: 120px;
       padding-left: 0.3em;
       padding-right: 0.3em;
+      padding-bottom: 0.5em;
 
       ul {
         padding-inline-start: 2em;
