Location editing in header

--- a/packages/mm-shared/src/event/details/EventDetailsView.scss
+++ b/packages/mm-shared/src/event/details/EventDetailsView.scss
@@ -1,6 +1,8 @@
 .EventDetailsView-root {
   .EventDetailsView-content {
     margin-top: 64px;
+    padding: 1em;
     height: 100%;
+    width: 100%;
   }
 }
