--- a/packages/host/src/event/eventView/EventTracks.scss
+++ b/packages/host/src/event/eventView/EventTracks.scss
@@ -1,10 +1,3 @@
 .EventTracks-root {
-  margin-left: 0;
-  padding-left: 0;
-
-  .EventTracks-no-tracks {
-    text-align: center;
-    width: 100%;
-    margin-top: 2em;
-  }
+  padding: 15px;
 }
