--- a/packages/host/src/event/eventList/NoEvents.scss
+++ b/packages/host/src/event/eventList/NoEvents.scss
@@ -1,5 +1,8 @@
 .NoEvents-root {
   padding: 1.5em;
+  padding-top: 4em;
+  max-height: 100%;
+  overflow: hidden;
   .NoEvents-button {
     width: 20%;
     height: 20%;
