--- a/packages/host/src/event/eventList/NoEvents.scss
+++ b/packages/host/src/event/eventList/NoEvents.scss
@@ -1,6 +1,6 @@
 .NoEvents-root {
   padding: 1.5em;
-  padding-top: 4em;
+  padding-top: 15%;
   max-height: 100%;
   overflow: hidden;
   .NoEvents-button {
