Improved trakc list animation

--- a/packages/mm-shared/src/playlist/Playlists.scss
+++ b/packages/mm-shared/src/playlist/Playlists.scss
@@ -54,6 +54,9 @@
     }
   }
 
+  .Playlists-tracks {
+    padding-left: 2em;
+  }
   .Playlists-track {
     margin-right: 0.5em;
     margin-left: 2em;
