Show setting in track list header

--- a/packages/mm-shared/src/track/TrackList.scss
+++ b/packages/mm-shared/src/track/TrackList.scss
@@ -3,5 +3,17 @@
 .TrackList-root {
   .TrackList-subheader {
     color: $primary;
+
+    .TrackList-info {
+      width: 100%;
+      height: 100%;
+    }
+
+    .TrackList-settings {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: row-reverse;
+    }
   }
 }
