Auto accept notifications

--- a/packages/host/src/event/eventView/EventView.scss
+++ b/packages/host/src/event/eventView/EventView.scss
@@ -8,4 +8,11 @@
   .EventView-tabs {
     padding: 0.5em 1.5em;
   }
+
+  .MuiBadge-badge {
+    right: -5%;
+    @include media('>sm') {
+      right: -20%;
+    }
+  }
 }
