Highlight new accepted tracks

--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -1,5 +1,8 @@
 @import '../theme/main';
 
+.TrackListItem-highlight {
+  background-color: rgba(58, 158, 209, 0.3);
+}
 .TrackListItem-root {
   .TrackListItem-content {
     padding-left: 1em;
