--- a/packages/mm-shared/src/track/PartySettings.scss
+++ b/packages/mm-shared/src/track/PartySettings.scss
@@ -3,6 +3,10 @@
   height: 100%;
   display: flex;
   flex-direction: row-reverse;
+
+  .MuiButton-label {
+    opacity: 0.5;
+  }
 }
 
 .PartySettings-dialog {
