--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -56,6 +56,7 @@
 
     .MuiFab-root {
       margin-left: 2em;
+      margin-right: 2.6em;
     }
     .MuiFab-secondary {
       background-color: $danger-red;
@@ -65,5 +66,22 @@
       background-color: $nice-green;
       opacity: 0.9;
     }
+  }
+}
+
+.TrackListItem-host-actions {
+  width: 100%;
+
+  .MuiFab-root {
+    margin-left: 2em;
+    margin-right: 0.8em;
+  }
+  .MuiFab-secondary {
+    background-color: $danger-red;
+    opacity: 0.9;
+  }
+  .MuiFab-primary {
+    background-color: $nice-green;
+    opacity: 0.9;
   }
 }
