--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -10,6 +10,11 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+
+    .explicit-icon {
+      margin-bottom: -0.3em;
+      margin-right: 0.3em;
+    }
   }
 
   .TrackListItem-track-image {
