--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -3,7 +3,7 @@
 $text-backdrop: rgba(58, 158, 209, 0.8);
 
 .EventHeader-container {
-  background-color: $primary;
+  background-color: white;
   color: white;
   position: relative;
   width: 100%;
