--- a/packages/mm-shared/src/track/TrackToolbar.scss
+++ b/packages/mm-shared/src/track/TrackToolbar.scss
@@ -2,6 +2,8 @@
 
 .TrackToolbar-root {
   height: 2em;
+  margin-top: 0.2em;
+  padding-top: 0.3em;
 
   .MuiFab-colorInherit {
     background-color: $secondary-light;
