--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -35,13 +35,8 @@ $text-backdrop: rgba(58, 158, 209, 0.8);
     }
 
     .EventHeader-details {
-      background: $text-backdrop;
-      border-radius: 5px;
-      height: 120px;
-      max-height: 125px;
-      padding: 0.1em;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      margin-left: -1em;
+      padding-left: 0;
     }
 
     .EventHeader-guests {
