Added host icon to party

--- a/packages/mm-shared/src/event/header/EventResponseMenu.scss
+++ b/packages/mm-shared/src/event/header/EventResponseMenu.scss
@@ -3,9 +3,10 @@
 .EventResponseMenu-button {
   color: white;
   border-radius: 1em;
-  font-size: 1em;
+  font-size: 0.7em;
   padding: 0em 1em;
-  height: 2em;
+  padding-bottom: 0.5em;
+  height: 2.8em;
 }
 
 .EventResponseMenu-menu-item {
