--- a/packages/mm-shared/src/event/header/EventHeader.scss
+++ b/packages/mm-shared/src/event/header/EventHeader.scss
@@ -24,7 +24,6 @@ $text-backdrop: rgba(58, 158, 209, 0.8);
   .EventHeader-actions {
     position: absolute;
     top: 50px;
-    text-align: center;
 
     .twitch-icon {
       color: $primary;
@@ -38,20 +37,8 @@ $text-backdrop: rgba(58, 158, 209, 0.8);
       padding-right: 0.2em;
     }
 
-    .EventHeader-settings {
-      background: $text-backdrop;
-      border-radius: 5px;
-      height: 120px;
-      padding-left: 0.3em;
-      padding-right: 0.3em;
-      padding-bottom: 0.5em;
-
-      ul {
-        padding-inline-start: 2em;
-        text-align: start;
-        font-size: 0.8em;
-        font-weight: 600;
-      }
+    .EventHeader-host {
+      margin: 0 auto;
     }
   }
 }
